<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center"
>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	 >

<TextView android:id="@+id/loginText1" android:text="@string/loginTextView" android:textSize="16px" android:gravity="center" android:layout_width="80px" android:layout_height="wrap_content"></TextView>
<EditText android:id="@+id/loginName1" android:hint="@string/loginNameHint" android:maxLength="11" android:singleLine="true" android:layout_width="155px" android:layout_height="wrap_content"></EditText>


</LinearLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	 >

<TextView android:id="@+id/pwdText1" android:text="@string/loginPwdView" android:textSize="16px" android:gravity="center" android:layout_width="80px" android:layout_height="wrap_content"></TextView>
<EditText android:id="@+id/pwdName1" android:hint="@string/loginPwdHint" android:layout_width="155px" android:password="true" android:layout_height="wrap_content" android:singleLine="true"></EditText>

</LinearLayout>
<!--  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	 >

<Button
android:id="@+id/submitBtn1"
android:layout_width="80px"
android:layout_height="wrap_content"
android:text="@string/submitBtnValue"
>
</Button>

<Button
android:id="@+id/resetBtn1"
android:layout_width="80px"
android:layout_height="wrap_content"
android:text="@string/loginResetValue"
>
</Button>

</LinearLayout>
-->


</LinearLayout>